# capycli

./: .coveragerc  .editorconfig  .gitignore  .isort.cfg  .markdownlint.yaml  AGENTS.md  BuildBinary_Linux.sh  BuildBinary_Win.ps1  CODEOWNERS  CODE_OF_CONDUCT.md  ChangeLog.md  Contributing.md  CreateCoverageReport.ps1  CreateCoverageReport_NoTest.ps1  DUMP.TXT  Dependency Detection.md  Dockerfile  Exit_Codes.md  FAQ.md  License.md  Readme.md  Readme_BOM.md  Readme_Filtering.md  Readme_Mapping.md  Readme_Workflow.md  RunChecks.ps1  SBOM-Quality.md  SECURITY.md  SoftwareClearingApproachOverview.md  UseCaseOverview.md  capycli.spec  examples.md  pyproject.toml  requirements.txt  sbom_cyclonedx_org.cdx.json.to.xml  sbom_cyclonedx_org.cdx.xml  tox.ini
.github/: copilot-instructions.md
.github/agents/: Reviewer.agent.md
.github/workflows/: python-package.yml  static-checks.yml  unit-tests.yml
.reuse/: dep5
LICENSES/: MIT.txt
SBOM/: sbom.cdx.json  sbom_all.cyclonedx.json  sbom_no_dev.cyclonedx.json
capycli/: __init__.py  __main__.py
capycli/bom/: __init__.py  bom_convert.py  bom_package.py  bom_validate.py  check_bom.py  check_bom_item_status.py  check_granularity.py  component_check.py  create_components.py  csv.py  diff_bom.py  download_attachments.py  download_sources.py  filter_bom.py  findsources.py  handle_bom.py  html.py  legacy.py  legacy_cx.py  map_bom.py  merge_bom.py  plaintext.py  show_bom.py
capycli/common/: __init__.py  capycli_bom_support.py  comparable_version.py  component_cache.py  dependencies_base.py  file_support.py  github_support.py  html_support.py  json_support.py  map_result.py  print.py  purl_service.py  purl_store.py  purl_utils.py  script_base.py  script_support.py  sw360_patch.py
capycli/config/: handle_config.py  list.py
capycli/data/: __init__.py  component_checks.json  granularity_list.csv  siemens_component_checks.json
capycli/dependencies/: __init__.py  handle_dependencies.py  javascript.py  maven_list.py  maven_pom.py  nuget.py  python.py  rust.py
capycli/main/: __init__.py  application.py  argument_parser.py  cli.py  exceptions.py  options.py  result_codes.py
capycli/mapping/: handle_mapping.py  mapping_to_html.py  mapping_to_xlsx.py
capycli/moverview/: handle_moverview.py  moverview_to_html.py  moverview_to_xlsx.py
capycli/project/: __init__.py  check_prerequisites.py  create_bom.py  create_project.py  create_readme.py  find_project.py  get_license_info.py  handle_project.py  project_component_check.py  show_ecc.py  show_licenses.py  show_project.py  show_vulnerabilities.py
documentation/: Dependency Detection.md  Readme_Componentcheck.md  Readme_Workflow.md  SBOM_Quality.md  SoftwareClearingApproachOverview.md
images/: workflow.vsdx
stubs/: cli_support.pyi  halo.pyi  jwt.pyi  packageurl.pyi  pytest.pyi  requirements.pyi  responses.pyi  sortedcontainers.pyi  vcr.pyi
stubs/sw360/: __init__.pyi  attachments.pyi  base.pyi  clearing.pyi  components.pyi  license.pyi  project.pyi  releases.pyi  sw360_api.pyi  sw360error.pyi  sw360oauth2.pyi  vendor.pyi  vulnerabilities.pyi
tests/: __init__.py  test_application.py  test_base.py  test_base_vcr.py  test_bom_bompackage.py  test_bom_convert.py  test_bom_create_components.py  test_bom_create_releases.py  test_bom_create_releases_integration.py  test_bom_diff.py  test_bom_downloadattachments.py  test_bom_downloadsources.py  test_bom_filter.py  test_bom_map2.py  test_bom_show.py  test_bom_validate.py  test_capycli.py  test_check_bom.py  test_check_bom_item_status.py  test_check_components.py  test_check_granularity.py  test_comparable_version.py  test_component_cache.py  test_create_bom.py  test_create_project.py  test_create_readme.py  test_csv.py  test_cyclonedx_1_6.py  test_dependencies_javascript.py  test_find_project.py  test_find_sources.py  test_get_dependencies_javascript.py  test_get_dependencies_nuget.py  test_get_dependencies_python.py  test_get_dependencies_rust.py  test_get_license_info.py  test_github_support.py  test_handle_bom.py  test_handle_getdependencies.py  test_handle_mapping.py  (+29 more)
tests/fixtures/: CLIXML_clipython-1.3.0.xml  Nuget.sln  Nuget1.csproj  Nuget2.csproj  authenticated_github_request.yml  capycli_extra.json  component_checks_extra.json  components.csv  legacy-cx.json  legacy.json  legacy_extra.json  mapping_overview.json  mapping_result.json  maven-dependency-list.txt  maven-raw.txt  package-lock-3.json  package-lock.json  plaintext.txt  pom.xml  projectinfo.json  pyproject.toml  readme_oss_config.json  sbom.cyclonedx.simple.json  sbom.siemens.cdx_1.6.json  sbom.siemens.cdx_1_4.json  sbom_1_6_invalid.json  sbom_for_check_prerequisites.json  sbom_for_component_check.json  sbom_for_create_components1.json  sbom_for_create_project.json  sbom_for_diff1.json  sbom_for_diff2.json  sbom_for_download-control.json  sbom_for_download.json  sbom_for_download_diff.json  sbom_for_find_sources.json  sbom_for_granularity.json  sbom_for_mapping1.json  sbom_for_mapping2.json  sbom_no_components.json  (+6 more)
tests/fixtures/poetry_1.8.3/: pyproject.toml
tests/fixtures/rust_metadata/: cargo.toml
tests/fixtures/rust_package/: Cargo.toml
tests/fixtures/rust_workspace/cyclonedx-rust-cargo/cyclonedx-bom/: Cargo.toml
tests/fixtures/uv_0.9.18/: pyproject.toml
