# SPDX-FileCopyrightText: (c) 2018-2025 Siemens
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "capycli"
version = "2.9.0"
description = "CaPyCli - Clearing Automation Python Command Line Interface for SW360"
authors = ["Thomas Graf <thomas.graf@siemens.com>"]
license = "MIT"
readme="Readme.md"
repository = "https://github.com/sw360/capycli"
homepage = "https://github.com/sw360/capycli"
keywords = ["sw360", "cli, automation", "license", "compliance", "clearing"]
include = [
    "LICENSE.md",
    { path = "capycli/data/granularity_list.csv", format = "wheel" },
    { path = "capycli/data/__init__.py", format = "wheel" },
    { path = "capycli/data/granularity_list.csv", format = "sdist" },
    { path = "capycli/data/__init__.py", format = "sdist" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]


[tool.poetry.urls]
issues = "https://github.com/sw360/capycli/issues"

[tool.poetry.scripts]
capycli = "capycli.main.cli:main"

[tool.poetry.dependencies]
python = "^3.9" # drop support for 3.8 to get urllib3 2.5
colorama = "^0.4.3"
requests = "^2.31.0" # fix CVE-2023-32681 
semver = "3.0.2"
packageurl-python = "^0.15.6"
pyjwt = "^2.4.0"
openpyxl = "^3.0.3"
requirements-parser = "0.11.0"
sw360 = "^1.8.1"
wheel = "^0.38.4"
cli-support = "2.0.1"
chardet = "5.2.0"
cyclonedx-python-lib = "^8.0.0"
tomli = "^2.0.2"
dateparser = "^1.1.8"
urllib3 = "*"
importlib-resources = "^5.12.0"
beautifulsoup4 = "^4.11.1"
jsonschema = "^4.23.0"
validation = "^0.8.3"

[tool.poetry.group.dev.dependencies]
flake8 = ">=3.7.8"
coverage = "^5.4"
responses = "0.24.1"
pytest = "7.4.3"
cli-test-helpers = "^3.1.0"
isort = "^5.12.0"
mypy = "^1.8.0"
types-colorama = "^0.4.15.12"
types-urllib3 = "^1.26.25.14"
types-openpyxl = "^3.1.0.32"
types-python-dateutil = "^2.8.19.14"
types-requests = "2.31.0.6"  # this is the last version that uses urllib3 < 2
types-beautifulsoup4 = "^4.12.0.20240106"
codespell = "^2.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    "ignore:Both `id` and `name` have been supplied - `name` will be ignored!",
    # cyclonedx-python-lib - UserWarning: The Component this BOM is describing None...
    "ignore::UserWarning",
    # cyclonedx-python-lib - DeprecationWarning: `@.tools` is deprecated from CycloneDX v1.5 onwards
    "ignore::DeprecationWarning"
]

[tool.mypy]
exclude = [
    "/tests",
]

show_error_codes = true
pretty = true

warn_unreachable = true
allow_redefinition = true

### Strict mode ###
warn_unused_configs         = true
disallow_subclassing_any    = true

disallow_any_generics       = true
disallow_untyped_calls      = true
disallow_untyped_defs       = true
disallow_incomplete_defs    = true
check_untyped_defs          = true
disallow_untyped_decorators = true
no_implicit_optional        = true
warn_redundant_casts        = true
warn_unused_ignores         = true
no_implicit_reexport        = true

[tool.codespell]
skip = "./htmlcov/*,./_internal_tests_/*,./__internal__/*,./tests/fixtures/*,*.svg,./capycli/data/granularity_list.csv,./ComponentCache.*"
ignore-words-list = "manuel, assertIn"
